# CMIP6-Arctic-Aerosol-Analysis

./: .gitignore  .gitmodules  README.md  analysis.ipynb  bar_plots_of_aprp.ipynb  demonstrate_reproducibility_of_zelinkas_results.ipynb  get_cmip6_data.ipynb  pyproject.toml  sw_analysis_aprp_arctic.ipynb  zelinka_comparative_study.ipynb
environment/: README.md  env.yml
utilities/: README.md  download-cmip6-1model-example.ipynb  download-cmip6-example.ipynb  download-cmip6-txtfile-criterias.ipynb  download-cmip6.ipynb
utilities/.ipynb_checkpoints/: download-cmip6-example-checkpoint.ipynb
utilities/download/: README.md  download-cmip6-1model-example.ipynb  download-cmip6-csvfile.ipynb  download-cmip6-txtfile.ipynb  download-cmip6.ipynb  download_cmip6.ipynb  library_for_download_notebooks.py  load_cmip6.py  research-criterias.csv
utilities/download/downloading-environment/: README.md  environment.yml
utilities/download/folders_handle/: create.py
utilities/downloading-environment/: README.md
utilities/get_cmip6_data/: README.md  get_cmip6_data.ipynb
utilities/get_cmip6_data/downloading-environment/: README.md  environment.yml
utilities/get_cmip6_data/folders_handle/: README.md  create.py
utilities/get_cmip6_data/load_raw_data/: README.md  load_cmip6.py
utilities/prepare_data/: extract_climatologies.py  extract_climatologies_datasets.py
utilities/regridding/: README.md  regridding_methods.py
utilities/representing_data/: generate_tables.py
utilities/store_data/: save_and_load_data.py
utilities/tests/: test_for_handle_data.py  test_handle_data.py
(+12 files in other folders)
